<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".auth.fragments.LoginFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:id="@+id/logo"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_64sdp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/heart" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:src="@drawable/location" />


            </RelativeLayout>

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/arima_madurai"
                android:text="@string/welcome"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvWelcome"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/arima_madurai"
                android:text="@string/log_in_to_continue"
                android:textColor="@color/white" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvContinue"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"

                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_madurai"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_input_layout"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_madurai"
                    android:textColor="@color/white"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_input_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/arima_madurai"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                app:indicatorColor="@color/white"
                android:indeterminate="true"
                app:indicatorSize="@dimen/_22sdp"
                android:visibility="gone"
                android:layout_below="@id/forgot_password_tv"
                android:layout_centerHorizontal="true"
                app:trackThickness="@dimen/_2sdp"
                />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/loading"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/arima_madurai"
                android:text="@string/login"
                android:textColor="@color/colorPrimary" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login_btn"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_madurai"
                    android:text="@string/still_don_t_have_an_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/register_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_toEndOf="@id/textView"
                    android:fontFamily="@font/arima_madurai"
                    android:text="@string/register_now"
                    android:textColor="@color/white" />


            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>