<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/arima_madurai_medium"
            android:text="Meeting"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/a"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/meetingLink">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/meeting_link_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arima_madurai"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/add_card_view"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/a"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_16sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/arima_madurai"
                android:text="@string/add_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cancel_card_view"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/a"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_toStartOf="@id/add_card_view"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_16sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/arima_madurai"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>